# stock_screen

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  data_stream.py  kafka_producer.py  redis.py  routes.py  symbols.yml  utils.py
kafka/: Dockerfile
